tests/neg-custom-args/captures/i24667.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i24667.scala:10:18 ---------------------------------------
10 |  val _: AnyRef = w // error on this line
   |                  ^
   |                  Found:    (w : O.type)
   |                  Required: AnyRef
   |
   |                  Note that capability `c` cannot flow into capture set {}.
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i24667.scala:11:22 ---------------------------------------
11 |  val _: AnyRef^{c} = w // error on this line, since d is also captured
   |                      ^
   |                      Found:    (w : O.type)
   |                      Required: Object^{c}
   |
   |                      Note that capability `O` cannot flow into capture set {c}.
   |                      Note that object O is a capability because it uses capabilities {c, d}
   |
   | longer explanation available when compiling with `-explain`
